syntax = "proto3";

message RoomMessage {
  bytes payload = 1;
  string room = 2;
  string sender = 3;
}

message PublishRoomMessage {
  bytes payload = 1;
  string room = 2;
}

message RoomSubscriptionMessage {
  string room = 1;
}

message EmptyResult {
  bool ok = 1;
}

service RoomService {
  rpc GetAllMessages(RoomSubscriptionMessage) returns (stream RoomMessage) {}
  rpc PublishMessage(PublishRoomMessage) returns (EmptyResult) {}
}

